GuestBookApp/Ingress/IngressControllerDeploymentDefination.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      name: ingress-pod
      labels:
        name: nginx-ingress
    spec:
      serviceAccountName: nginx-ingress-serviceaccount
      containers:
        - name: nginx-ingress-container
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.25.0
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 80
              hostPort: 80
          args:
            - /nginx-ingress-controller
            - --default-backend-service=tutum-namespace/tutum-hello-world-service
            #- --kubeconfig=/home/ubuntu/.kube/config
